# insighta-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml
insighta/: api.py  auth.py  cli.py  credentials.py  output.py  profiles.py
