[project]
name = "insighta-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.3",
    "httpx>=0.28.1",
    "pip>=26.1",
    "rich>=15.0.0",
]

[project.scripts]
insighta = "insighta.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
